--- a/css/mbs.css
+++ b/css/mbs.css
@@ -2,520 +2,654 @@
 /* CSS Document */
 
 * {
-	border: none;
-	box-sizing: border-box;
-	list-style: none;
+  border: none;
+  box-sizing: border-box;
+  list-style: none;
 }
+
 html {
-	font-size: 10px;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+  font-size: 10px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
 body {
-	font-size: 18px;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	font-family: 'Open sans', sans-serif;
-	color: #444;
+  font-size: 18px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto Slab', serif;
+  color: #444;
 }
+
 .wrapper {
-	width: 100%;
-	clear: both;
-	margin: 0 auto;
+  width: 100%;
+  clear: both;
+  margin: 0 auto;
 }
+
 .header {
-	background: rgba(172, 35, 25, 1);
-	background: -moz-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
-	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(172, 35, 25, 1)), color-stop(50%, rgba(172, 35, 25, 1)), color-stop(50%, rgba(68, 57, 125, 1)), color-stop(100%, rgba(68, 57, 125, 1)));
-	background: -webkit-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
-	background: -o-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
-	background: -ms-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
-	background: linear-gradient(to right, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
- filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ac2319', endColorstr='#44397d', GradientType=1 );
+  background: rgba(172, 35, 25, 1);
+  background: -moz-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(172, 35, 25, 1)), color-stop(50%, rgba(172, 35, 25, 1)), color-stop(50%, rgba(68, 57, 125, 1)), color-stop(100%, rgba(68, 57, 125, 1)));
+  background: -webkit-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
+  background: -o-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
+  background: linear-gradient(to right, rgba(172, 35, 25, 1) 0%, rgba(172, 35, 25, 1) 50%, rgba(68, 57, 125, 1) 50%, rgba(68, 57, 125, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ac2319', endColorstr='#44397d', GradientType=1);
 }
+
 .body {
-	margin: 0 auto;
-	padding: 0;
-	background: #fff url(../images/paisley.png) repeat;
-	background-attachment: fixed;
+  margin: 0 auto;
+  padding: 0;
+  background: #fff url(../images/paisley.png) repeat;
+  background-attachment: fixed;
 }
+
 .container {
-	min-width: 320px;
-	width: 100%;
-	margin: 0 auto;
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-	-moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
- *zoom: 1;
+  min-width: 320px;
+  max-width: 100%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
-.container:before, .container:after {
-	content: " "; /* 1 */
-	display: table; /* 2 */
-}
+
+.container:before,
 .container:after {
-	clear: both;
+  content: " ";
+  display: table;
 }
-.header > .container {
-	height: 80px;
-	margin: 0 auto;
-	padding: 0 10px;
-	position: relative;
-	background: transparent url(../images/header-bg.jpg) no-repeat 50% 100%;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+
+.container:after {
+  clear: both;
 }
-.body > .container {
-	background: #f7f5f3;
+
+.header>.container {
+  height: 80px;
+  margin: 0 auto;
+  padding: 0;
+  position: relative;
+  background: transparent url(../images/header-bg.jpg) no-repeat 50% 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.body>.container {
+  background: #f7f5f3;
+}
+
 .lhs {
-	display: block;
-	float:  none;
-	padding-top: 0;
-	width: 100%;
+  display: block;
+  float: none;
+  padding-top: 0;
+  width: 100%;
 }
+
 .rhs {
-	display: block;
-	float: none;
-	width: 100%;
+  display: block;
+  float: none;
+  width: 100%;
 }
+
+.section {
+  margin-bottom: 3rem;
+}
+
 .img-wrapper {
-	position: absolute;
-	z-index: 1000;
-	height: 156px;
-	top: 20px;
-	left: 50px;
-	display: none;
+  float: right;
+  margin-left: calc(1vw + 1em);
 }
-.img-wrapper img {
-	display: block;
-	width: auto;
-	height: 100%;
-}
+
 .map {
-	border: solid 1px #ddd;
-	margin: 20px 0;
-	position: relative;
-	width: 100%;
+  border: solid 1px #ddd;
+  margin: 20px 0;
+  position: relative;
+  width: 100%;
 }
+
 .caption {
-	font-size: 0.8em;
-	line-height: 1.9;
-	text-align: right;
+  font-size: 0.8em;
+  line-height: 1.9;
+  text-align: right;
 }
+
 .feature-body {
-	clear: both;
-	padding: 0;
-	width: 100%;
+  clear: both;
+  padding: 0 2rem;
+  width: 100%;
 }
+
+.hero {}
+
+/* clearfix - remove after flex */
+
+.hero:before,
+.hero:after {
+  content: "";
+  display: table;
+}
+
+.hero:after {
+  clear: both;
+}
+
 .controls {
-	padding: 0;
-	position: relative;
-	top: 0;
-	width: 100%;
-	padding: 0;
+  display: none;
+  padding: 0;
+  position: relative;
+  top: 0;
+  width: 100%;
+  padding: 0;
 }
+
 .nav {
-	border: dashed 1px #c4c4c4;
-	border-width: 1px 0 0;
-	border-width: 0;
-	margin: 10px 0;
-	padding: 0;
+  border: dashed 1px #c4c4c4;
+  border-width: 1px 0 0;
+  border-width: 0;
+  margin: 0;
+  padding: 0;
 }
+
 .nav-link {
-	border: dashed 1px #c4c4c4;
-	border-width: 1px 0 0;
-	display: block;
-	color: #036;
-	padding: 8px 12px;
-	text-decoration: none;
-	font-weight: 800;
+  border: dashed 1px #c4c4c4;
+  border-width: 1px 0 0;
+  display: block;
+  color: #036;
+  padding: 8px 12px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 1.8rem;
 }
+
 .nav-link.active {
-	background-color: #e3e4e5;
-	border: dashed 1px #b4b4b4;
-	border-width: 1px 0 0;
-	color: #a00;
-	text-decoration: none;
+  background-color: #e3e4e5;
+  border: dashed 1px #b4b4b4;
+  border-width: 1px 0 0;
+  color: #a00;
+  text-decoration: none;
 }
+
 .nav li:first-child .nav-link {
-	border-top-color: transparent;
-	padding-top: 8px;
+  border-top-color: transparent;
+  padding-top: 8px;
 }
+
 .nav li:last-child .nav-link {
-	border-bottom-color: transparent;
-	padding-bottom: 12px;
+  border-bottom-color: transparent;
+  padding-bottom: 12px;
 }
 
 .navbar-toggle {
-	background-color: transparent;
-	border: solid 1px #fff;
-	border-radius: 6px;
-	color: #fff;
-	margin: 0;
-	position: absolute;
-	top: 24px;
-	right: 1em;
-	height: 4rem;
-	font-size: 1.6rem;
-}
-.icon-bar {
-	background-color: #fff;
-}
-.contact {
-	border: dashed 1px #c4c4c4;
-	border-width: 1px 0;
-	color: #fff;
-	margin: 20px 0;
-	padding: 10px 0;
-	background-color: rgba(172,35,25,.95);
-	border: none;
-	/* responsive */
-	margin: 0 -15px;
-	padding: 20px;
-}
-.half {
-	display: inline-block;
-	line-height: 1.5;
-	padding: 0;
-	position: relative;
-	text-align: left;
-	padding-left: .5em;
-	width: 49%;
-	font-size: 16px;
-	margin: 0;
+  /* remove it entirely - not needed for single page on mobile */
+  display: none;
+  background-color: transparent;
+  border: solid 1px #fff;
+  border-radius: 6px;
+  color: #fff;
+  margin: 0;
+  position: absolute;
+  top: 24px;
+  right: 1em;
+  height: 4rem;
+  font-size: 1.6rem;
 }
 
-.half:first-child {
-	text-align: right;
-	padding-left: 0;
-	padding-right: 1em;
+.icon-bar {
+  background-color: #fff;
 }
-.contact img {
-	position: absolute;
-	left: 16px;
+
+.contact-wrapper {
+  background-color: #AC2319;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 100%;
 }
+
+.contact {
+  color: #fff;
+  margin: 0;
+  padding: 10px 0;
+  border: none;
+  padding: 40px 0 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-item {
+  margin-bottom: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.contact-item-icon {
+  margin-right: 1.4rem;
+}
+
+.contact-item-content {
+  font-weight: 300;
+  color: #fff;
+  font-size: 2.4rem;
+}
+
 .contact a,
 .contact a:hover {
-	color: #fff;
+  color: #fff;
 }
+
 .contact a:hover {
-	text-decoration: underline;
+  border-bottom: solid 1px #fff;
+  text-decoration: none;
 }
+
 a {
-	color: #036;
-	text-decoration: none;
+  color: #036;
+  text-decoration: none;
 }
-a:hover, a:active {
-	color: #AC2319;
-	text-decoration: underline;
+
+a:hover,
+a:active {
+  color: #AC2319;
+  text-decoration: underline;
 }
+
 .mbs {
-	display: inline-block;
+  display: inline-block;
 }
-h1, h2, h3, h4 {
-	font-family: 'Georgia', sans-serif;
+
+h2,
+h3,
+h4 {
+  font-family: 'Roboto Slab', serif;
 }
+
 h1 {
-	display: block;
-	width: auto;
-	text-align: left;
-	margin: 0;
-	padding: 22px 0 0;
-	color: #fff;
-	font-size: 28px;
-	text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
-	filter: dropshadow(color=#666666, offx=1, offy=1);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  display: block;
+  width: auto;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  font-size: calc(6vw + 10px);
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.6);
 }
-h2, .h2 {
-	border-width: 0;
-	background-color: #AC2319;
-	color: #fff;
-	font-size: 30px;
-	font-weight:  400;
-	margin: 0 0 24px;
- padding: 12px .625rem 18px;
- text-align: center;
+
+h2,
+.h2 {
+  border-width: 0;
+  background-color: #AC2319;
+  color: #fff;
+  font-size: 32px;
+  font-weight: 400;
+  margin: 0 -2rem 24px;
+  padding: 12px .625rem 18px 3rem;
+  text-align: left;
 }
 
 #intro .feature-body {
-	padding-top: 20px;
-}
-
-#intro h2 {
-	display: none;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 table tr:first-child h3 {
-	margin-top: 0;
+  margin-top: 0;
 }
+
 p {
-	line-height: 1.4;
-	margin-top: 0;
-padding: 0 .625rem;
+  line-height: 1.4;
+  margin: 0 0 1.6rem;
+  padding: 0;
 }
+
 /* intro */
 
 iframe {
-	width: 100%;
-	height: 350px;
-	padding: 2px;
-	border: solid 1px #aaa;
+  width: 100%;
+  height: 350px;
+  padding: 2px;
+  border: solid 1px #aaa;
 }
+
 .img-link {
-	float: right;
-	padding: 0 10px 10px 10px;
-	width: 20%;
-	min-width: 80px;
+  float: right;
+  padding: 0 10px 10px 10px;
+  width: 20%;
+  min-width: 120px;
 }
 
 .img-link>img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
+
 /* tables */
 
 table {
- margin: 0 .625rem 20px;
- width: 100%;
+  margin: 0 0 20px;
+  width: 100%;
 }
+
 table tr>td,
 table tr>th {
-	border-bottom: dashed 1px #c4c4c4;
-	padding: 4px 1.5em 4px 0;
+  border-bottom: dashed 1px #c4c4c4;
+  padding: 4px 1.5em 4px 0;
 }
+
 table tr:first-child>td,
 table tr:first-child>th {
-	border-top: dashed 1px #c4c4c4;
+  border-top: dashed 1px #c4c4c4;
 }
+
 tr>td:nth-child(3) {
-	width: 10%;
+  width: 10%;
 }
 
 tr>td:nth-child(2) {
-	width: 30%;
+  width: 30%;
 }
 
-h3, .h3, th {
-	color: #434343;
-	font: 20px 'Open sans', sans-serif;
-	font-weight: 600;
-	text-align: left;
-	margin-bottom: 10px;
-	width: auto%;
+h3,
+.h3,
+th {
+  color: #434343;
+  font: 20px 'Roboto Slab', serif;
+  font-weight: 600;
+  text-align: left;
+  margin-bottom: 10px;
+  width: auto;
 }
+
 td {
-	vertical-align: bottom;
-	padding-right: 30px;
+  vertical-align: bottom;
+  padding-right: 30px;
 }
+
 td p {
-	margin: 0 0 20px;
-	padding: 0;
+  margin: 10px 0 20px;
+  padding: 0;
 }
-.svg-icon {
-	display: inline-block;
-	margin-right: 4px;
-	width: 18px;
-	height: 18px;
-	position: relative;
-	top: 2px;
+
+/* icomoon svg */
+.icon {
+  display: inline-block;
+  margin-right: 4px;
+  width: 24px;
+  height: 24px;
+  position: relative;
+  top: 2px;
+  fill: #fff;
 }
 
 /* sticky nav */
 .fixed {
-	position: static;
-	width: auto;
+  position: static;
+  width: auto;
 }
 
 #back-to-top {
-	display: none;
-	position: absolute;
-	right: 20px;
-	bottom: 20px;
-	font-weight: 800;
+  /* display: none; */
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  font-weight: 800;
 }
 
-/* media queries */
-@media (min-width:472px) {
-	h1 {
-		font-size: 36px;
-		text-align: center;
-	}
-
-	.half {
-		font-size: 18px;
-	}
+/* helpers */
+.mobile-only {
+  display: block;
 }
+
+.screen-only {
+  display: none;
+}
+
+/******************
+******************/
+
+.treatment-wrapper {
+  /* border-top: dashed 1px #c4c4c4; */
+  padding-top: 1.6rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.treatment-title {
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 0 0 1rem;
+}
+
+.treatment-tools {
+  width: 100%;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.treatment-time,
+.treatment-cost {
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #444;
+  display: inline-block;
+}
+
+.treatment-icon {
+  margin-right: 5px;
+  margin-left: 2rem;
+}
+
+.treatment-icon:nth-of-type(1) {
+  margin-left: 0;
+}
+
+.treatment-icon>.icon {
+  height: 18px;
+  width: 18px;
+  margin: 0;
+  fill: #AC2319;
+}
+
+.treatment-content {
+  padding-bottom: 1.5rem;
+}
+
+/******************
+******************
+******************
+******************
+******************
+******************
+ media queries 
+ ******************
+ ******************
+ ******************
+ *******************/
+
 @media (min-width: 768px) {
-	body {
-		font-size: 16px;
-	}
-	table {
-		width: 100%;
-	}
-	table tr>td,
-	table tr>th {
-		border-width: 0;
-	}
-	table tr:first-child>td,
-	table tr:first-child>th {
-		border-width: 0;
-	}
 
-	tr>td:nth-child(3) {
-		width: 10%;
-	}
+  body {
+    font-size: 16px;
+  }
 
-	tr>td:nth-child(2) {
-		width: 25%;
-	}
+  .lhs {
+    float: left;
+    width: 25%;
+    padding-top: 50px;
+  }
 
- .lhs {
- float:  left;
- padding-top: 85px;
- width: 25%;
-}
- .rhs {
- float: left;
- width: 75%;
-}
- .container {
- width: 750px;
-}
- .header > .container {
- height: 100px;
-}
- .fixed {
- position: fixed;
- top: 0;
- width: 180px;
-}
- .img-wrapper {
- display: block;
-}
- #intro {
- margin-top: 40px;
-}
+  .rhs {
+    float: left;
+    width: 75%;
+    padding-top: 50px;
+  }
 
-#intro h2 {
-	display: block;
-}
+  .container {
+    min-width: 750px;
+    width: 90%;
+  }
 
-#intro .feature-body {
-	padding-top: 0;
-}
+  .header>.container {
+    height: 100px;
+  }
 
- h1 {
- padding-top: 30px;
-}
- h2, .h2 {
-	 background-color: transparent;
-	 color: #AC2319;
-	 padding: 12px 0 18px;
-	 border: dashed 1px #b4b4b4;
-	 border-width: 1px 0;
-	 text-align: left;
-}
+  .fixed {
+    position: fixed;
+    top: 0;
+    width: 180px;
+  }
 
-.navbar-nav.nav {
-	border-width: 1px 0;
-	float: none;
-}
+  #intro .feature-body {
+    padding-top: 0;
+  }
 
-.navbar-nav.nav>li {
-	float: none;
-}
+  h1 {
+    font-size: 56px;
+  }
 
-.contact {
-background-color: rgba(172,35,25,.95);
-border: none;
-color: #fff;
-margin: 20px 0;
-}
- .half {
- float: none;
-font-size: 13px;
-padding: 8px 16px;
-width: auto;
-}
- .contact img {
- left: 0;
-}
+  h2,
+  .h2 {
+    background-color: transparent;
+    color: #AC2319;
+    padding: 12px 0 18px;
+    border: dashed 1px #b4b4b4;
+    border-width: 1px 0;
+    text-align: left;
+    margin: 0 0 24px;
+  }
 
- .feature-body {
- padding: 0 30px 0 30px;
-}
- .controls {
-padding: 20px 20px 10px;
-}
- table {
-margin: 0 0 20px;
-}
+  .navbar-nav.nav {
+    border-width: 1px 0;
+    float: none;
+  }
 
-.half,
-.half:first-child {
-	display: block;
-	line-height: 1.5;
-	padding: 0;
-	position: relative;
-	text-align: left;
-	padding-left: 0;
-	width: auto;
-	font-size: 16px;
-	margin: 0;
-}
+  .navbar-nav.nav>li {
+    float: none;
+  }
 
-.half:first-child {
-	margin-bottom: 1rem;
-}
+  .contact-wrapper {
+    background-color: transparent;
+    padding: 20px 0 10px 20px;
+    display: block;
+  }
 
-.rhs > div:last-child {
-	margin-bottom: 80vh;
-}
+  .contact {
+    background-color: #e5e4e4;
+    border: none;
+    color: #444;
+    margin: 0;
+    padding: 20px;
+    border-radius: 1rem;
+    /* turn off flex */
+    display: block;
+  }
+
+  .contact-item {
+    display: block;
+  }
+
+  .contact-item-icon {
+    display: block;
+    margin-bottom: .5rem;
+  }
+
+  .contact-item-content {
+    color: #444;
+    font-size: calc(1rem + .5vw);
+    font-weight: 400;
+  }
+
+  .contact a,
+  .contact a:hover {
+    color: #444;
+  }
+
+  .contact a:hover {
+    border-color: #444;
+  }
+
+  .feature-body {
+    padding: 0 30px 0 30px;
+  }
+
+  .controls {
+    display: block;
+    padding: 0 0 10px 20px;
+  }
+
+  .rhs>div:last-child {
+    margin-bottom: 80vh;
+  }
+
+  .img-wrapper {
+    display: block;
+  }
+
+  .img-link {
+    min-width: 200px;
+  }
+
+  .icon {
+    fill: #444;
+  }
+
+  .treatment-tools {
+    width: 35%;
+    justify-content: flex-end;
+  }
+
+  /* helpers */
+  .mobile-only {
+    display: none;
+  }
+
+  .screen-only {
+    display: block;
+  }
 
 
- @media (min-width: 992px) {
- .container {
- width: 970px;
-}
- .fixed {
- width: 235px;
- top: 0;
-}
-
- h1 {
- font-size: 48px;
- padding-top: 18px;
-}
- .half {
-font-size: 15px;
-}
-
-.half,
-.half:first-child {
-	padding-left: 0;
 }
 
-.contact {
-	margin: 20px;
-}
+@media (min-width: 992px) {
 
-.contact img {
- left: 12px;
-}
-tr>td:nth-child(3) {
-	width: 10%;
-}
+  .fixed {
+    width: 235px;
+    top: 0;
+  }
 
-tr>td:nth-child(2) {
-	width: 20%;
-}
-}
- @media (min-width: 1200px) {
- .container {
- width: 1170px;
-}
- .fixed {
- width: 285px;
-}
-}
+  h1 {
+    font-size: 56px;
+  }
+
+  tr>td:nth-child(3) {
+    width: 10%;
+  }
+
+  tr>td:nth-child(2) {
+    width: 20%;
+  }
+
+  .contact-item-content {
+    font-size: 1.8rem;
+  }
+
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px;
+    }
+
+    .fixed {
+      width: 285px;
+    }
+  }
